# RandomX

./: configure.ac  zREADME
src/: Makefile.am  allocator.cpp  allocator.hpp  common.hpp  configuration.h  dataset.cpp  instruction_weights.hpp  intrin_portable.h  jit_compiler.hpp  jit_compiler_riscv.cpp  jit_compiler_riscv.hpp  jit_compiler_riscv_static.S  jit_compiler_riscv_static.hpp  jit_compiler_x86.cpp  jit_compiler_x86_static.S  randomx.cpp  reciprocal.h  superscalar.cpp  virtual_machine.cpp  virtual_memory.cpp  vm_compiled.cpp  vm_compiled.hpp  vm_compiled_light.cpp  vm_compiled_light.hpp  vm_interpreted.cpp  vm_interpreted.hpp  vm_interpreted_light.cpp  vm_interpreted_light.hpp  zS.S  zlog.c  zlog.h  ztest.c
src/riscv/: program_constants.inc  program_epilogue.inc  program_loop_load.inc  program_loop_store.inc  program_loop_store_last.inc  program_prologue.inc  program_read_dataset_sshash_fin.inc  program_read_dataset_sshash_init.inc
src/tests/: benchmark.cpp
